--- a/package.json
+++ b/package.json
@@ -7,20 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@remobile/react-native-call": "^1.0.1",
     "native-base": "^2.3.10",
-    "react": "16.3.0-alpha.1",
-    "react-native": "^0.54.2",
-    "react-native-background-color": "0.0.6",
-    "react-native-ios-status-bar-padding": "^1.2.0",
-    "react-native-phone-call": "^1.0.4",
-    "react-navigation": "^1.5.1"
+    "react": "16.3.0-alpha.2",
+    "react-native": "0.54.2",
+    "react-navigation": "^1.5.8"
   },
   "devDependencies": {
-    "babel-jest": "22.4.1",
+    "babel-jest": "23.0.0-alpha.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.2",
-    "react-test-renderer": "16.3.0-alpha.1"
+    "react-test-renderer": "16.3.0-alpha.2"
   },
   "jest": {
     "preset": "react-native"
